k8s/admin/redis.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: admin-redis
  labels:
    app: admin-redis
spec:
  selector:
    matchLabels:
      app: admin-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: admin-redis
    spec:
      containers:
      - name: master
        image: redis
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 100Mi
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: admin-redis-service
  labels:
    app: admin-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: admin-redis
